fixed dropdown speed button spacing issue

--- a/src/components/buttons/Buttons.css
+++ b/src/components/buttons/Buttons.css
@@ -1,11 +1,17 @@
 .buttons-container {
     display: flex;
-    width: 75%;
-    justify-content: space-evenly;
+    width: 100%;
+    justify-content: center;
     align-items: center;
     margin: 2% auto;
 }
 
 .drop {
-    margin: 0 2% 0 0;
+    margin: 3%;
+}
+
+.drop button {
+    width: 100px;
+    height: 50px;
+    margin: 0 auto;;
 }
