--- a/src/components/grid/Grid.css
+++ b/src/components/grid/Grid.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 40%;
+    width: 50%;
     margin: 2% auto;
 }
 
