--- a/src/theme/index.css
+++ b/src/theme/index.css
@@ -1,3 +1,7 @@
+* {
+    border: 1px solid green;
+}
+
 body {
     width: 90%;
     margin: auto;
